# odoo-platform

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .pre-commit-config.yaml  .secrets.enc.yaml  .sops.yaml  .sqlfluff  .trivyignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.local-llm.yml  docker-compose.multitenant.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.tls-acme.yml  docker-compose.yml  pyproject.toml
.github/workflows/: check-module-knowledge.yml  ci.yml  codeql.yml  dependency-review.yml
.semgrep/: odoo-rules.yml
addons/_vendor/: README.md  fetch_oca.sh
ai-gateway/: .dockerignore  Dockerfile  pyproject.toml
ai-gateway/app/: config.py  main.py  security.py
ai-gateway/app/prompts/: anomaly_detect.md  anomaly_explain.md  classify_document.md  nlq_to_domain.md  predict_capacity.md  workflow_recommend.md
ai-gateway/app/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
ai-gateway/app/routers/: anomaly.py  chat.py  classify.py  embed.py  nlq.py  predict.py  workflow.py
ai-gateway/tests/: conftest.py  test_anthropic_provider.py  test_chat_router.py  test_health.py  test_security.py  test_workflow_predict.py
apps/landing-public/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
caddy/: Caddyfile  Caddyfile.multitenant  Caddyfile.staging
custom-predictor/: Dockerfile  pyproject.toml
custom-predictor/app/: advisor.py  analyzer.py  config.py  main.py  prom_client.py
docs/: ARKA-AIM-Master-Data-Template.xlsx  Odoo Implementation for Levi's.pptx  adding-vertical.md  ai-activation.md  architecture.md  cicd-activation.md  coretax.md  demo-test-status.md  erajaya-odoo-hub.jsx  odoo19-port-status.md  ollama-local-deploy.md  pdp-compliance.md  presentation-erajaya-vas.html  presentation-erajaya-vas.md  presentation-erajaya-vas.pptx  presentation-odoo-indirect-recorder.md  presentation-odoo-indirect-recorder.pptx  prod-deploy-checklist.md  spec-headless-fashion-commerce-ai.md  studio-lite-quickstart.md  vps-demo-deploy.md
docs/Master data-20260528T090510Z-3-001/: Review Result _Clarification.xlsx  Review Result.xlsx
docs/audit/: module-diff-after.md  module-diff.json  module-diff.md
docs/compliance/: soc2-controls.md
docs/hht/: datawedge.md
docs/runbooks/: backup-restore.md  disaster-recovery.md  incident-odoo-oom.md  incident-postgres-down.md  odoo-high-cpu.md  pajakku-down.md  postgres-slow.md  production-drill-2026-05-16.md  tenant-data-recovery.md  tls-renewal.md
docs/sops/: tenant-offboarding.md  tenant-onboarding.md
hub-portal/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
hub-portal/server/: index.mjs
hub-portal/src/: App.jsx  App.tsx  api.ts  main.jsx  main.tsx  tokens.js  tokens.ts
imports/: arka_aim_coa.csv  arka_aim_journals.csv  arka_aim_taxes.csv
nginx/: nginx.conf
nginx/certs/: .gitkeep
nginx/conf.d/: odoo.conf
nginx/modsecurity/: README.md  crs-setup.conf  main.conf
observability/alertmanager/: alertmanager.yml
observability/loki/: loki-config.yml
observability/odoo-exporter/: Dockerfile  exporter.py
observability/prometheus/: prometheus.yml  recording_rules.yml
observability/promtail/: promtail-config.yml
odoo/: .dockerignore  Dockerfile  entrypoint.sh  healthcheck.sh  odoo.conf.tmpl  requirements.txt
postgres/: pg_hba.conf
postgres/init/: 01-extensions.sql  03-roles.sql  (+3 more)
scripts/: audit-install-round2.sh  audit-install.sh  check_inherit_deps.py  check_knowledge_drift.py  dev-bootstrap.sh  generate_module_knowledge.py  migrate_sql_constraints.py  orchestrator-call.sh  tenant-backup.sh  tenant-list-backups.sh  tenant-provision.sh  tenant-restore.sh  verify-tenant-chain.sh
tenant-orchestrator/: .dockerignore  Dockerfile  README.md  pyproject.toml
tenant-orchestrator/app/: backup.py  config.py  crypto.py  db.py  dbops.py  main.py  odoo_admin.py  odoo_jsonrpc.py  provisioner.py  provisioner_ssh.py  registry.py  scheduler.py  security.py  validators.py
tenant-orchestrator/app/routers/: backups.py  intake.py  tenants.py  vps.py
tenant-orchestrator/bootstrap_templates/: README.md  deploy_odoo.sh.template  install_docker.sh.template
tenant-orchestrator/tests/: conftest.py  test_crypto.py  test_health.py  test_validators.py
tools/: build_indirect_recorder_deck.py  build_presentation.py  generate_module_icons.py  module_diff.py  sync_module_icons.sh
(+1879 files in other folders)
