[project]
name = "custom-predictor"
version = "0.1.0"
description = "Predictive capacity advisor sidecar"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "httpx[http2]==0.27.2",
  "apscheduler==3.10.4",
  "prometheus-client==0.21.0",
  "structlog==24.4.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.0",
]
