[project]
name = "tenant-orchestrator"
version = "0.1.0"
description = "Multi-tenant lifecycle service for the Odoo 19 Platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic[email]==2.9.2",
  "pydantic-settings==2.6.0",
  "httpx[http2]==0.27.2",
  "psycopg[binary,pool]==3.2.3",
  "cryptography==43.0.3",
  "bcrypt==4.2.0",
  "boto3==1.35.54",
  "structlog==24.4.0",
  "prometheus-client==0.21.0",
  "croniter==3.0.4",
  "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "responses==0.25.3",
  "ruff==0.7.2",
  "mypy==1.13.0",
  "moto[s3]==5.0.18",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM", "TCH", "ASYNC"]
ignore = ["S101", "S608"]  # allow assert in tests; SQL composition is parameterised via psycopg3

[tool.pytest.ini_options]
asyncio_mode = "auto"
