[project]
name = "tenant-orchestrator"
version = "0.1.0"
description = "Multi-tenant lifecycle service for the Odoo 19 Platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic[email]==2.9.2",
  "pydantic-settings==2.6.0",
  "httpx[http2]==0.27.2",
  "psycopg[binary,pool]==3.2.3",
  "cryptography==43.0.3",
  "bcrypt==4.2.0",
  "boto3==1.35.54",
  "structlog==24.4.0",
  "prometheus-client==0.21.0",
  "croniter==3.0.4",
  "apscheduler==3.10.4",
  "paramiko==3.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "responses==0.25.3",
  "ruff==0.7.2",
  "mypy==1.13.0",
  "moto[s3]==5.0.18",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM", "TCH", "ASYNC"]
ignore = [
  "S101",     # assert allowed in tests and defensive checks
  "S608",     # SQL composition is parameterised via psycopg3, not string-concatenated
  "S108",     # /tmp paths are intentional in bootstrap-template handling
  "S310",     # URL open uses validated/HTTPS-only targets (Odoo / S3)
  "S603",     # subprocess args are controlled (no shell injection surface)
  "B904",     # raise-without-from not always desired
  "TC001",    # typing-only-first-party imports
  "TC003",    # typing-only-stdlib imports
  "F841",     # unused-locals tracked separately for review (see issue followup)
  "E402",     # one intentional late import (TYPE_CHECKING-style guard)
  "E741",     # one allowed ambiguous name
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
